--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To do app</title>
     <link rel="stylesheet" href="styleIndex.css">
-</head>s
+</head>
 <body>
     <div id="holder">
         <div id="title">
